# sumatrapdf

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitattributes  .gitignore  .gitmodules  AUTHORS  BACKERS.md  CMakeLists-all_tests.txt  CMakeLists-efi.txt  CMakeLists-files.txt  CMakeLists-plugin_test.txt  CMakeLists-unrar.txt  CMakeLists.txt  COPYING.BSD  Claude.md  FileThumbnails.h  Makefile  Makefile.mingw  PRETTYSUMATRA_NOTES.md  SECURITY.md  SumatraAbout.cpp  SumatraPDF.aps  SumatraPDF.cpp  SumatraPDF.rc  TRANSLATORS  agents.md  ailog.txt  appveyor.yml  asan.supp  bench.py  build-release-and-upload.bat  build-release.bat  build-release.py  build.ts  claude.md  codeql-config.yml  compile_flags.txt  config-example.mk  (+92 more)
ext/crengine/: AUTHORS  CMakeLists.txt  LICENSE  clean.bat  make_all  makebindst.bat  makedocs.bat  mksrcdst.bat  readme.txt
ext/crengine/docs/: WolfFormat.txt
ext/crengine/doxygen/: crengine.cfg
ext/crengine/include/: chmfmt.h  cp_stats.h  cr3version.h  crengine.h  crgui.h  cri18n.h  crsetup.h  crskin.h  crtest.h  crtrace.h  crtxtenc.h  cssdef.h  dtddef.h  epubfmt.h  fb2def.h  gammatbl.h  hist.h  hyphman.h  lstridmap.h  lvarray.h  lvbmpbuf.h  lvdocview.h  lvdrawbuf.h  lvfnt.h  (+28 more)
ext/dav1d/: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  COPYING  NEWS  README.md  THANKS.md  gcovr.cfg  meson.build  meson_options.txt
ext/freetype/: .gitignore  .mailmap  CMakeLists.txt  ChangeLog  ChangeLog.20  ChangeLog.21  ChangeLog.22  ChangeLog.23  ChangeLog.24  ChangeLog.25  ChangeLog.26  ChangeLog.27  ChangeLog.28  Jamfile  Jamrules  MSBuild.rsp  MSBuild.sln  Makefile  README  README.git  autogen.sh  configure  meson.build  meson_options.txt  modules.cfg  vms_make.com
ext/gumbo-parser/: .clang-format  .gitignore  .gitmodules  .travis.yml  CHANGES.md  CONTRIBUTING.md  DEBUGGING.md  Doxyfile  Makefile.am  README.md  appveyor.yml  autogen.sh  configure.ac  genperf.py  gentags.py  gtest.gyp  gumbo.pc.in  gumbo_parser.gyp  setup.py
ext/harfbuzz/: .clang-format  .codecov.yml  .editorconfig  .travis.yml  BUILD.md  CMakeLists.txt  CONFIG.md  COPYING  Makefile.am  NEWS  README  README.md  README.mingw.md  README.python.md  README.wine.md  RELEASING.md  TESTING.md  TODO  appveyor.yml  autogen.sh  azure-pipelines.yml  configure.ac  git.mk  harfbuzz.doap  meson.build  meson_options.txt  mingw-configure.sh  mingw-ldd.py  mingw32.sh  mingw64.sh  replace-enum-strings.cmake
ext/jasper/: COPYRIGHT  INSTALL  Jamfile  LICENSE  Makefile.am  NEWS  README  autogen.sh  configure.ac  jasper.spec.in  libjasper.lib
ext/jbig2dec/: .cvsignore  .gitignore  CHANGES  Jamfile  LICENSE  Makefile.am  Makefile.unix  README  SConstruct  autogen.sh  config_win32.h  configure.ac  configure.ac.in  getopt.c  getopt.h  getopt1.c  jbig2.c  jbig2.h  jbig2_arith.c  jbig2_arith.h  jbig2_arith_iaid.c  jbig2_arith_iaid.h  jbig2_arith_int.c  jbig2_arith_int.h  jbig2_generic.c  jbig2_generic.h  jbig2_halftone.c  jbig2_halftone.h  jbig2_huffman.c  jbig2_huffman.h  jbig2_hufftab.c  jbig2_hufftab.h  jbig2_image.c  jbig2_image.h  jbig2_image_pbm.c  jbig2_image_png.c  jbig2_image_rw.h  jbig2_metadata.c  jbig2_metadata.h  jbig2_mmr.c  (+25 more)
ext/lcms2/: .gitignore  .travis.yml  AUTHORS  COPYING  ChangeLog  INSTALL  LICENSE  Makefile.am  Makefile.in  README.1ST  README.md  SECURITY.md  aclocal.m4  autogen.sh  compile  config.guess  configure  configure.ac  depcomp  lcms2mt.pc.in  ltmain.sh  meson.build  meson_options.txt  missing
ext/libarchive/: CMakeLists.txt  COPYING  archive.h  archive_acl.c  archive_acl_private.h  archive_check_magic.c  archive_cmdline.c  archive_crc32.h  archive_crypto.c  archive_crypto_private.h  archive_endian.h  archive_entry.3  archive_entry.c  archive_entry.h  archive_entry_acl.3  archive_entry_copy_bhfi.c  archive_entry_copy_stat.c  archive_entry_link_resolver.c  archive_entry_locale.h  archive_entry_paths.3  archive_entry_perms.3  archive_entry_private.h  archive_entry_sparse.c  archive_entry_stat.3  archive_entry_stat.c  archive_entry_strmode.c  archive_entry_time.3  archive_entry_xattr.c  archive_getdate.c  archive_match.c  archive_options.c  archive_pathmatch.c  archive_platform.h  archive_ppmd7.c  archive_ppmd7_private.h  archive_ppmd_private.h  archive_private.h  archive_rb.c  archive_read.3  archive_read.c  (+103 more)
ext/libdjvu/: .cvsignore  Arrays.cpp  Arrays.h  BSByteStream.cpp  BSByteStream.h  BSEncodeByteStream.cpp  ByteStream.cpp  ByteStream.h  COPYRIGHT  DataPool.cpp  DataPool.h  DjVmDir.cpp  DjVmDir.h  DjVmDir0.cpp  DjVmDir0.h  DjVmDoc.cpp  DjVmDoc.h  DjVmNav.cpp  DjVmNav.h  DjVuAnno.cpp  DjVuAnno.h  DjVuDocEditor.cpp  DjVuDocEditor.h  DjVuDocument.cpp  DjVuDocument.h  DjVuDumpHelper.cpp  DjVuDumpHelper.h  DjVuErrorList.cpp  DjVuErrorList.h  DjVuFile.cpp  DjVuFile.h  DjVuFileCache.cpp  DjVuFileCache.h  DjVuGlobal.cpp  DjVuGlobal.h  DjVuGlobalMemory.cpp  DjVuImage.cpp  DjVuImage.h  DjVuInfo.cpp  DjVuInfo.h  (+77 more)
ext/libheif/: .clang-tidy  .gitignore  CMakeLists.txt  COPYING  CPPLINT.cfg  Makefile.am  README.md  appveyor.yml  autogen.sh  build-emscripten.sh  configure.ac  libheif.pc.in  post.js  pre.js
ext/libjpeg-turbo/: BUILDING.txt  CMakeLists.txt  ChangeLog.md  ChangeLog.txt  LICENSE.md  LICENSE.txt  Makefile.am  Makefile.in  README  README-turbo.txt  README.md  acinclude.m4  aclocal.m4  bmp.c  bmp.h  cjpeg.1  cjpeg.c  config.h  config.h.in  configure  configure.ac  djpeg.1  djpeg.c  doxygen.config  filelist.txt  install.txt  jccolext.c  jccolor.c  jcdctmgr.c  jchuff.c  jcmainct.c  jcmarker.c  jcmaster.c  jconfig.h  jconfig.h.in  jcparam.c  jcstest.c  jdapistd.c  jdatadst-tj.c  jdatadst.c  (+61 more)
ext/openjpeg/: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  INSTALL.md  LICENSE  Makefile.am  Makefile.in  NEWS.md  THANKS.md  appveyor.yml  bio.c  cidx_manager.c  cidx_manager.h  cio.c  cio.h  dwt.c  dwt.h  event.c  event.h  function_list.c  function_list.h  image.c  image.h  indexbox_manager.h  invert.c  invert.h  j2k.c  j2k.h  j2k_lib.c  j2k_lib.h  jp2.c  jp2.h  libopenjp2.pc.cmake.in  mct.c  mct.h  mqc.c  mqc.h  openjpeg.c  openjpeg.h  (+27 more)
linux/src/: main_gtk.c  meson.build  test_mupdf.c
(+10110 files in other folders)
